fixed the flickering issue and sticky hover animation issue

--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -3,17 +3,11 @@
   color: white;
   border: white;
 }
-.dark .square:hover {
-  background-color: rgb(36, 36, 36);
-}
 
 .light {
   background-color: white;
   color: black;
   border: black;
-}
-.light .square:hover {
-  background-color: rgb(237, 237, 237);
 }
 
 @media (orientation: portrait) {
@@ -50,6 +44,27 @@
   }
 }
 
+@media (hover: hover) {
+  .homeLink:hover {
+    color: #f08;
+  }
+  .themeSelector:hover {
+    opacity: 65%;
+  }
+  .dark .resetButton:hover {
+    background-color: #0ab;
+  }
+  .light .resetButton:hover {
+    background-color: #0ab;
+  }
+  .dark .square:hover {
+    background-color: rgb(36, 36, 36);
+  }
+  .light .square:hover {
+    background-color: rgb(237, 237, 237);
+  }
+}
+
 .main {
   display: flex;
   align-items: center;
@@ -65,9 +80,6 @@
   left: 1vw;
   font-size: 25px;
   opacity: 100%;
-}
-.homeLink:hover {
-  color: #f08;
 }
 
 .themeSelector {
@@ -85,9 +97,6 @@
 }
 .light .themeSelector {
   background-color: black;
-}
-.themeSelector:hover {
-  opacity: 65%;
 }
 
 .gameContainer {
@@ -117,6 +126,7 @@
   line-height: 0px;
   border: 2px solid;
   cursor: pointer;
+  backface-visibility: hidden;
 }
 
 .infoContainer {
@@ -141,12 +151,6 @@
 .resetButton.celebrate {
   animation: upDown 1s ease infinite;
 }
-.dark .resetButton:hover {
-  background-color: #0ab;
-}
-.light .resetButton:hover {
-  background-color: #0ab;
-}
 
 .icon-disabled {
   opacity: 0.5;
@@ -154,6 +158,7 @@
 }
 
 .appear {
+  /*for symbol*/
   animation: appear 0.2s cubic-bezier(0.5, 1.8, 0.1, 1.1);
 }
 
